--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
         with:
           ruby-version: '3.0'
           bundler-cache: true
-#      - name: Grant execute permissions
-#        run: chmod +x /home/runner/work/Challenge-Chapter-8/Challenge-Chapter-8/gradlew
+      - name: Grant execute permissions
+        run: chmod +x /home/runner/work/RajawaliAir/RajawaliAir/gradlew
       - uses: maierj/fastlane-action@v3.0.0
         with:
           lane: 'beta'
