--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
 name: Android Development CI
 
 on:
-  push:
-    branches: [ "cicd" ]
+  pull_request:
+    branches: [ "main" ]
   # Allows you to run this workflow manually from the Actions tab
   # workflow_dispatch:
 jobs:
